Add case studies WIP

--- a/assets/css/problem.sass
+++ b/assets/css/problem.sass
@@ -1,8 +1,12 @@
 .split-75-25
   .highlight-blue
-    width: 75%
+    width: 70%
   .highlight-pink
-    width: 25%
+    width: 24%
+    margin-left: 5%
+  .single
+    margin-left: 76%
+
 
 .split-50-50
   .highlight-blue
@@ -12,6 +16,22 @@
     margin-left: 5%
   .single
     margin-left: 56%
+
+
+.split-40-60
+  .highlight-blue
+    width: 40%
+  .highlight-pink
+    width: 54%
+    margin-left: 5%
+
+.split-60-40
+  .highlight-blue
+    width: 60%
+  .highlight-pink
+    width: 34%
+    margin-left: 5%
+
 
 .highlight
   display: inline-block
