--- a/views/case-studies/big-and-bold/solution_section.haml
+++ b/views/case-studies/big-and-bold/solution_section.haml
@@ -77,7 +77,9 @@
                   The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
                 %p
                   Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
-
+                %p
+                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels.
+                  This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel.
 
   .sub-section.sub-section-desktop
     .blue-block.blue-block-long
@@ -102,7 +104,9 @@
                   The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
                 %p
                   Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
-
+                %p
+                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels.
+                  This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel.
 
 .section
   .sub-section.sub-section-mobile
