--- a/views/case-studies/campaigns/result.haml
+++ b/views/case-studies/campaigns/result.haml
@@ -13,22 +13,20 @@
           .row
             .result-block.blue
               .result
-                %h5 16k
-                %p
-                  Youtube
-                  %br Views
+                %h5 585k
+                %p Views
             .result-block.white
               .result
-                %h5 30k
-                %p
-                  Facebook
-                  %br Views
+                %h5 5k
+                %p Engagement
             .result-block.blue
               .result
-                %h5 252k
-                %p Likes
+                %h5 224
+                %p Comments
             .result-block.white
               .result
-                %p
-                  Media Coverage: Future Sport / Digital Sport / Campaign / The Drum
+                %h5 600
+                %p Superfans
+
+          Media Coverage: Future Sport / Digital Sport / Campaign / The Drum
 
