--- a/views/case-studies/campaigns/solution_section.haml
+++ b/views/case-studies/campaigns/solution_section.haml
@@ -14,9 +14,12 @@
             .row
               .seven.columns
                 %h2
-                  Approach
+                  Nuke’em
                 %p
-                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’, which looked at multiple UGC options for the audience; these options also fell within two categories, high commitment and low commitment. This was the preferred approach and we got to work.The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
+
+                %p
+                  We split the UGC options into two separate categories, high commitment and low commitment. This allowed light touch participation as well as more elaborate efforts, giving the audience the ability to decide how they wished to interact with Team GB.
 
                 %h2
                   Launch
@@ -38,9 +41,12 @@
             .row
               .seven.columns
                 %h2
-                  Approach
+                  Nuke’em
                 %p
-                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’, which looked at multiple UGC options for the audience; these options also fell within two categories, high commitment and low commitment. This was the preferred approach and we got to work.The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+                  At pitch stage, we provided a strategic approach nicknamed ‘nuke’em’. This was a ‘balls to wall’ approach that looked to invite the audience to express their support for Team GB in a multitude of ways.
+
+                %p
+                  We split the UGC options into two separate categories, high commitment and low commitment. This allowed light touch participation as well as more elaborate efforts, giving the audience the ability to decide how they wished to interact with Team GB.
 
                 %h2
                   Launch
@@ -67,11 +73,13 @@
 
               .seven.columns
                 %h2
-                  Additional Content
+                  The Campaign
                 %p
-                  As part of the campaign we filmed with some of Team GB’s Superfans. Created a ‘How To’ series and  a film of Team GB athletes expressing their thanks to the Superfans with some fine karaoke skills.
+                  As part of the campaign we filmed with some of Team GB’s Superfans, created a ‘How To’ series and a film of Team GB athletes expressing their thanks to the Superfans with some fine lip syncing skills.
                 %p
-                  We wrapped the campaign by creating a Social Media wall animation that showcased all of the great content produced by fans as part of the campaign.
+                  All of this content was pulled together into a central campaign page on Team GB’s website https://www.teamgb.com/superfans.
+                %p
+                  We wrapped the campaign by creating a Social Media wall animation that showcased all of the incredible content produced by fans as part of the campaign.
                 %p
                   Phew!
 
@@ -91,11 +99,13 @@
 
               .seven.columns
                 %h2
-                  Additional Content
+                  The Campaign
                 %p
-                  As part of the campaign we filmed with some of Team GB’s Superfans. Created a ‘How To’ series and  a film of Team GB athletes expressing their thanks to the Superfans with some fine karaoke skills.
+                  As part of the campaign we filmed with some of Team GB’s Superfans, created a ‘How To’ series and a film of Team GB athletes expressing their thanks to the Superfans with some fine lip syncing skills.
                 %p
-                  We wrapped the campaign by creating a Social Media wall animation that showcased all of the great content produced by fans as part of the campaign.
+                  All of this content was pulled together into a central campaign page on Team GB’s website https://www.teamgb.com/superfans.
+                %p
+                  We wrapped the campaign by creating a Social Media wall animation that showcased all of the incredible content produced by fans as part of the campaign.
                 %p
                   Phew!
 
