--- a/views/case-studies/digital-influencer/header.haml
+++ b/views/case-studies/digital-influencer/header.haml
@@ -2,10 +2,10 @@
 
   .hero-header
     %p
-      Every youtube challenge ever
+      National Lottery Awards
       %br
       %span.sub
-        Nattional lottery good causes
+        Nattional lottery
 
   .overlay
-  .header-image{ :style => "background-image: url('/assets/img/case-studies/big-and-bold/header-img.jpg')"}
+  .header-image{ :style => "background-image: url('/assets/img/case-studies/digital-influencer/header-img.jpg')"}
