--- a/views/case-studies/digital-influencer/result.haml
+++ b/views/case-studies/digital-influencer/result.haml
@@ -13,20 +13,20 @@
           .row
             .result-block.blue
               .result
-                %h5 2m
+                %h5 xx
                 %p Views
             .result-block.white
               .result
-                %h5 4k
-                %p Comments
+                %h5 xx
+                %p Engagement
             .result-block.blue
               .result
-                %h5 146k
-                %p Likes
+                %h5 xx
+                %p
+                  No. of
+                  %br content
             .result-block.white
               .result
-                %h5 10k
-                %p
-                  Behind the
-                  %br scenes
+                %h5 xx
+                %p Reach
 
