--- a/views/case-studies/digital-influencer/solution_section.haml
+++ b/views/case-studies/digital-influencer/solution_section.haml
@@ -13,24 +13,26 @@
                   The Solution
             .row
               .seven.columns
-                %h2
-                  Think big!
                 %p
-                  The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+                  The National Lottery Good Causes social channels aren’t the biggest so we looked to build the campaign around a digital influencer to ensure the reach needed to promote such a massive TV show.
+                  %br
+                  But then it struck us! What’s better than one digital influencer? Well, three of course!!
+                  %br
+                  Working with social media illuminati, Arron Crascall, Stuggy and Anto Sharp, we were able to reach far beyond the existing audience, effectively raising the profile of the show and driving iPlayer views.
+
+                %p
+                  Strategically we broke the content plan down into four stages:
 
                 %h2
-                  Authentic Message
+                  Pre-show
+                  %span.small
+                    \- Building excitement and engagement leading up to the shows pre-record.
                 %p
-                  To help deliver the messaging needed, we needed a funded British athlete to feature and that person was Team GB athletics captain and 100m sprinter, Adam Gemili.
-
-                %h2
-                  Confident Execution
-                %p
-                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
+                  Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
 
       .four.offset-by-seven.columns.ksi.media-mobile
         .ksi-img
-          %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
+          %img.image{:src => "/assets/img/case-studies/digital-influencer/solution-1.jpeg"}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -41,19 +43,27 @@
           .inner
             .row
               .seven.columns
-                %h2
-                  Think big!
                 %p
-                  The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+                  The National Lottery Good Causes social channels aren’t the biggest so we looked to build the campaign around a digital influencer to ensure the reach needed to promote such a massive TV show.
+                  %br
+                  But then it struck us! What’s better than one digital influencer? Well, three of course!!
+                  %br
+                  Working with social media illuminati, Arron Crascall, Stuggy and Anto Sharp, we were able to reach far beyond the existing audience, effectively raising the profile of the show and driving iPlayer views.
+
+                %p
+                  Strategically we broke the content plan down into four stages:
 
                 %h2
-                  Authentic Message
+                  Pre-show
+                  %span.small
+                    \- Building excitement and engagement leading up to the shows pre-record.
                 %p
-                  To help deliver the messaging needed, we needed a funded British athlete to feature and that person was Team GB athletics captain and 100m sprinter, Adam Gemili.
+                  Content included an Anto Sharp short form piece, a snapchat story of highlights from last year and a mobile optimised re-edit of Arron Crascall previous behind the scenes.
+
 
       .four.offset-by-seven.columns.ksi
         .ksi-img
-          %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
+          %img.image{:src => "/assets/img/case-studies/digital-influencer/solution-1.jpeg"}
 
 .section
   .sub-section.sub-section-mobile
@@ -70,13 +80,28 @@
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
               .seven.columns
+
+                %h2
+                  Awards Night
+                  %span.small
+                    \- Sneak peeks behind the scenes. With strong calls to action promoting the broadcast.
                 %p
-                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
+                  This included a facebook live stream by Stuggy to over 2 million followers, a snapchat story by Arron Crascall which was viewed 100k times, plus various posts from Anto Sharp to over 1 million followers.
+
+                %h2
+                  Awards Broadcast
+                  %span.small
+                    \- Supplementing behind the scenes content as the Awards were broadcast. Driving ‘second screening’ and engagement.
                 %p
-                  Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
-                  The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
+                  This saw the release of a behind the scenes 360 tour, hosted by Stuggy. A highlights compilation by Anto Sharp, a snapchat story by Stuggy and a short form piece featuring Arron Crascall.
+
+                %h2
+                  Post Broadcast
+                  %span.small
+                    \- A series of additional pieces of content designed to drive iPlayer views post broadcast.A series of additional pieces of content designed to drive iPlayer views post broadcast.A series of additional pieces of content designed to drive iPlayer views post broadcast.
                 %p
-                  Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
+                  Our full behind the scenes film went live. This was supported by an Instagram highlights compilation by Arron Crascall, a final snapchat story featuring all highlights and three entertaining ad-hoc short form pieces.
+
 
 
   .sub-section.sub-section-desktop
@@ -94,15 +119,25 @@
 
               .seven.columns
                 %h2
-                  Confident Execution
+                  Awards Night
+                  %span.small
+                    \- Sneak peeks behind the scenes. With strong calls to action promoting the broadcast.
                 %p
-                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
-                %p
-                  Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
-                  The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
-                %p
-                  Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
+                  This included a facebook live stream by Stuggy to over 2 million followers, a snapchat story by Arron Crascall which was viewed 100k times, plus various posts from Anto Sharp to over 1 million followers.
 
+                %h2
+                  Awards Broadcast
+                  %span.small
+                    \- Supplementing behind the scenes content as the Awards were broadcast. Driving ‘second screening’ and engagement.
+                %p
+                  This saw the release of a behind the scenes 360 tour, hosted by Stuggy. A highlights compilation by Anto Sharp, a snapchat story by Stuggy and a short form piece featuring Arron Crascall.
+
+                %h2
+                  Post Broadcast
+                  %span.small
+                    \- A series of additional pieces of content designed to drive iPlayer views post broadcast.
+                %p
+                  Our full behind the scenes film went live. This was supported by an Instagram highlights compilation by Arron Crascall, a final snapchat story featuring all highlights and three entertaining ad-hoc short form pieces.
 
 .section
   .sub-section.sub-section-mobile
@@ -122,7 +157,7 @@
             .row
               .seven.columns
                 .quote
-                  “  Tanjun managed to produce a film which worked for both us and KSI. It was pitched perfectly – funny, tongue-in-cheek, well messaged – and has had great audience engagement. "
+                  “ It’s always a risk mixing mainstream celebrities with internet sensations – especially on the red carpet - but Tanjun managed to do this very successfully.  They managed to book us the holy trinity of Facebook – Arron, Anto and Stuggy and then concocted a whole series of encounters with the likes of Ainsley Harriott, Anton du Beke, Kimberley Wyatt and a host of Strictly dancers. They researched the opportunities and devised plans which they could then adapt to the situations as they arose. "
                 .auth
                   — Jackie O Sullivan, Director,
                   %br National Lottery Promotions Unit
@@ -138,7 +173,7 @@
             .row
               .five.offset-by-one.columns
                 .quote
-                  “  Tanjun managed to produce a film which worked for both us and KSI. It was pitched perfectly – funny, tongue-in-cheek, well messaged – and has had great audience engagement. "
+                  “ It’s always a risk mixing mainstream celebrities with internet sensations – especially on the red carpet - but Tanjun managed to do this very successfully.  They managed to book us the holy trinity of Facebook – Arron, Anto and Stuggy and then concocted a whole series of encounters with the likes of Ainsley Harriott, Anton du Beke, Kimberley Wyatt and a host of Strictly dancers. They researched the opportunities and devised plans which they could then adapt to the situations as they arose. "
                 .auth
                   — Jackie O Sullivan, Director,
                   %br National Lottery Promotions Unit
