--- a/views/case-studies/digital-strategy/problem.haml
+++ b/views/case-studies/digital-strategy/problem.haml
@@ -1,4 +1,4 @@
-.section
+.section.pink
   .sub-section
     .mobile-header.white-bg
       %h1
@@ -11,28 +11,46 @@
       .middle
         .inner
           .row
-            .eight.columns
-              %p.highligh-blue
-                %b British Triathlon:
-                Our friends at Team GB gave us your details. We’re relaunching our entire digital brand and need some kick-ass content ideas. You in?
-              %p.highligh-pink
-                %b Tanjun:
-                Sounds more fun than a barrel of monkeys! We’re in!
-              %p.highligh-blue
-                %b British Triathlon:
-                Great! Can you come in and present three content ideas?
-              %p.highligh-pink
-                %b Tanjun:
-                No! Nope, nooooo, nopey nope! We’ll do even better than that!
-              %p.highligh-blue
-                %b British Triathlon:
-                Ok!!!
-              %p.highligh-pink
-                %b Tanjun:
-                We’ll create a whole content strategy which will develop a solid blueprint for your entire approach to content creation.
-              %p.highligh-blue
-                %b British Triathlon:
-                Well, i’ll be a monkey's uncle!!! That’d be awesome! You guys are the bestest!
-              %p.highligh-pink
-                %b Tanjun:
-                Yes...yes we are! :)
+            .six.columns.split-50-50
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand British Triathlon:
+                  %p.chat Our friends at Team GB gave us your details. We’re relaunching our entire digital brand and need some kick-ass content ideas. You in?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Sounds more fun than a barrel of monkeys! We’re in!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand British Triathlon:
+                  %p.chat Great! Can you come in and present three content ideas?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat  No! Nope, nooooo, nopey nope! We’ll do even better than that!
+
+
+.section
+  .sub-section
+    .outer
+      .middle
+        .inner
+
+          .row
+            .six.columns.split-50-50
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand British Triathlon:
+                  %p.chat Ok!!!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat We’ll create a whole content strategy which will develop a solid blueprint for your entire approach to content creation.
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand British Triathlon:
+                  %p.chat Well, i’ll be a monkey's uncle!!! That’d be awesome! You guys are the bestest!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Yes...yes we are! :)
