--- a/views/case-studies/digital-strategy/result.haml
+++ b/views/case-studies/digital-strategy/result.haml
@@ -27,3 +27,7 @@
               .result
                 %h5 XX
                 %p Likes
+            .result-block.blue
+              .result
+                %h5 XX
+                %p Likes
