--- a/views/case-studies/digital-strategy/solution_section.haml
+++ b/views/case-studies/digital-strategy/solution_section.haml
@@ -13,16 +13,22 @@
                   The Solution
             .row
               .seven.columns
-                %h2 Strategy
+                %h2 A Foundation
                 %p We built a complete content strategy from the ground up by deconstructing their audience into key passion points. We proposed a three tier approach to content creation which provided clarity on what needed to be made.
 
-                %h2 Tier One:
+                %p These are the content tiers we applied and their primary purpose:
+
+                %h3 Tier One:
 
                 %p Engaging the core audience and developing the existing Triathlon community
 
-                %h2 Tier Two:
+                %h3 Tier Two:
 
                 %p Content that is tied to passion points that would appeal beyond the core triathlon audience
+
+                %h3 Tier Three:
+
+                %p The ‘big ‘bombs’. Content executions that would go way beyond their current audience and would yield big returns.
 
       .four.offset-by-seven.columns.ksi.media-mobile
         .ksi-img
@@ -37,17 +43,22 @@
           .inner
             .row
               .seven.columns
-                %h2 Strategy
+                %h2 A Foundation
                 %p We built a complete content strategy from the ground up by deconstructing their audience into key passion points. We proposed a three tier approach to content creation which provided clarity on what needed to be made.
 
-                %h2 Tier One:
+                %p These are the content tiers we applied and their primary purpose:
+
+                %h3 Tier One:
 
                 %p Engaging the core audience and developing the existing Triathlon community
 
-                %h2 Tier Two:
+                %h3 Tier Two:
 
                 %p Content that is tied to passion points that would appeal beyond the core triathlon audience
 
+                %h3 Tier Three:
+
+                %p The ‘big ‘bombs’. Content executions that would go way beyond their current audience and would yield big returns.
 
       .four.offset-by-seven.columns.ksi
         .ksi-img
@@ -68,15 +79,13 @@
                   NEED COPY
 
               .seven.columns
-                %h2 Tier Three:
 
-                %p The ‘big ‘bombs’. Content executions that would go way beyond their current audience and would yield big returns.
+                %h2 Athlete Profiles
+                %p As part of their base content we sought to raise the profile of all of their athletes. We did this by creating highly personable snapshots of all of their athletes. A unique look at their personalities that would help to build a relationship with Tri’s growing communities.
 
-                %h2 A little extra
 
-                %p We also offered support in equipping and up skilling the team to create content in-house. Thus allowing content output to increase significantly leading to better engagement and community building.
-
-                %p As a result, British Triathlon’s content had transformed their online presence and allowed them to position themselves as a leading sporting body in British sport.
+                %h2 Tutorials
+                %p Sometimes you just need to make content that’s useful. With Triathlon growing at a rate of knots, more and more people are looking to learn about the technical aspects of training for essentially three sports. We helped, by creating a tutorial series that would help to build a solid offering of content for British Tri’s Youtube channel and newsletters.
 
 
   .sub-section.sub-section-desktop
@@ -93,22 +102,57 @@
                   NEED COPY
 
               .seven.columns
-                %h2 Tier Three:
 
-                %p The ‘big ‘bombs’. Content executions that would go way beyond their current audience and would yield big returns.
-
-                %h2 A little extra
-
-                %p We also offered support in equipping and up skilling the team to create content in-house. Thus allowing content output to increase significantly leading to better engagement and community building.
-
-                %p As a result, British Triathlon’s content had transformed their online presence and allowed them to position themselves as a leading sporting body in British sport.
+                %h2 Athlete Profiles
+                %p As part of their base content we sought to raise the profile of all of their athletes. We did this by creating highly personable snapshots of all of their athletes. A unique look at their personalities that would help to build a relationship with Tri’s growing communities.
 
 
+                %h2 Tutorials
+                %p Sometimes you just need to make content that’s useful. With Triathlon growing at a rate of knots, more and more people are looking to learn about the technical aspects of training for essentially three sports. We helped, by creating a tutorial series that would help to build a solid offering of content for British Tri’s Youtube channel and newsletters.
 
 
+.section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .five.columns.media-mobile
+                .embed-container.short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+
+              .seven.columns
+                %h2 Membership
+                %p For the sport to thrive, British Tri needs support from its members. We aimed to help them increase their membership base with a series of content executions that included profiles of first time triathlon competitors and grassroots ‘Go Tri’ events, presenting Triathlon as an accessible sport for all!
 
 
+                %h2 A Little Extra
+                %p We also offered support in equipping and up skilling the team to create content in-house. Thus allowing content output to increase significantly, leading to better engagement and community building.
 
+                %p As a result, British Triathlon’s content has transformed their online presence and allowed them to position themselves as a leading sporting body in British sport.
+
+
+  .sub-section.sub-section-desktop
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .seven.columns
+
+                %h2 Membership
+                %p For the sport to thrive, British Tri needs support from its members. We aimed to help them increase their membership base with a series of content executions that included profiles of first time triathlon competitors and grassroots ‘Go Tri’ events, presenting Triathlon as an accessible sport for all!
+
+
+                %h2 A Little Extra
+                %p We also offered support in equipping and up skilling the team to create content in-house. Thus allowing content output to increase significantly, leading to better engagement and community building.
+
+                %p As a result, British Triathlon’s content has transformed their online presence and allowed them to position themselves as a leading sporting body in British sport.
+
+              .five.columns
+                .embed-container.short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
 
 
 
