--- a/views/case-studies/short-form/header.haml
+++ b/views/case-studies/short-form/header.haml
@@ -2,10 +2,7 @@
 
   .hero-header
     %p
-      Every youtube challenge ever
-      %br
-      %span.sub
-        Nattional lottery good causes
+      Short Form Content
 
   .overlay
   .header-image{ :style => "background-image: url('/assets/img/case-studies/big-and-bold/header-img.jpg')"}
