--- a/views/case-studies/short-form/problem.haml
+++ b/views/case-studies/short-form/problem.haml
@@ -1,4 +1,4 @@
-.section
+.section.pink
   .sub-section
     .mobile-header.white-bg
       %h1
@@ -11,55 +11,67 @@
       .middle
         .inner
           .row
-            .eight.columns
-              %p.highligh-blue
-                %b The National Lottery:
-                Hey Tanjun
-              %p.highligh-pink
-                %b Tanjun:
-                Hey guys
-              %p.highligh-blue
-                %b The National Lottery:
-                Can you communicate the message that over 1,300 British athletes are funded by The National Lottery, making them some of the best athletes in the world?
-              %p.highligh-pink
-                %b Tanjun:
-                Yeah, no worries!
-              %p.highligh-blue
-                %b The National Lottery:
-                Yeah, BTW, can you communicate it to a completely new young audience that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
-              %p.highligh-pink
-                %b Tanjun:
-                Ha! Young people hey, lol. Yep, no worries.
-              %p.highligh-blue
-                %b The National Lottery:
-                Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever, across the UK. In fact, can you also communicate the fact we have funded over 500k projects.
-              %p.highligh-pink
-                %b Tanjun:
-                Right! Yeah, we’ll add that to the list.
-              %p.highligh-blue
-                %b The National Lottery:
-                Great, thank you!
-              %p.highligh-pink
-                %b Tanjun:
-                You’re welcome
+            .twelve.columns.split-40-60
 
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat It’s tough isn’t it!!!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Brand:
+                  %p.chat Yes it is. The ever lurching to the right of British politics and growing disparities in wealth and inequality with some of the most vulnerable people in our society being left behind and forgotten. Yes! It is tough!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat Nah not that!! Who cares about that!!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Brand:
+                  %p.chat Oh ok!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat We mean, content...making stuff...all of the time! It’s a ball ache right! And expensive?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Brand:
+                  %p.chat Yep! We’re not just brands anymore, we’re broadcasters and entertainers. And to do that we need to be creating stuff! Consistently creating stuff! If not, then we’re no longer relevant!
 .section
   .sub-section
-    .outer
+    .outer.outer-long
       .middle
         .inner
 
           .row
-            .six.offset-by-six.columns
-              %p.highligh-blue
-                %b The National Lottery:
-                Oh, one other thing…
-              %p.highligh-pink
-                %b Tanjun:
-                Yeah, sure, go for it!
-              %p.highligh-blue
-                %b The National Lottery:
-                You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
-              %p.highligh-pink
-                %b Tanjun:
-                Errr, yep, we can do that!!!!! Nooooo problem!!!
+            .twelve.columns.split-60-40
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat Exactly! And unless you have a budget the size of a Russian oligarch’s ‘pension fund’, what can you do?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Brand:
+                  %p.chat Nothing!! We can do nothing but accept our inevitable and impending doom!!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat Well one thing you can do! Is to create short form content.
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Brand:
+                  %p.chat  But isn’t that a bit rubbish? It’s like proper content but not as good? Shorter in fact?
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat It’s actually insanely effective when done well. Can be amazingly cost effective. Allows you to be more reactive and it also can be some of the most creative content executions you’ll get to produce.
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Brand:
+                  %p.chat  Well smoke me a kipper, I'll be back for breakfast!!!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Tanjun:
+                  %p.chat Exactly! We think you should make a shed load! And if you want. We can make some for you! Here’s some of the short form stuff we’ve made. Take a look!
+
+
