--- a/views/case-studies/small-and-nimble/problem.haml
+++ b/views/case-studies/small-and-nimble/problem.haml
@@ -1,4 +1,4 @@
-.section
+.section.pink
   .sub-section
     .mobile-header.white-bg
       %h1
@@ -11,22 +11,46 @@
       .middle
         .inner
           .row
-            .eight.columns
-              %p.highligh-blue
-                %b Team GB:
-                Brazil. Olympic Preparation Camp. Team GB athletes. Make stuff?
-              %p.highligh-pink
-                %b Tanjun:
-                Yes, yes...aaaand yes!
-              %p.highligh-blue
-                %b Team GB:
-                Cool! You’ll have very limited access and time with the athletes so you’ll need to be super reactive and think on your feet! Do monkeys even have feet?
-              %p.highligh-pink
-                %b Tanjun:
-                Yes! Yes we do! Thank you very much!
-              %p.highligh-blue
-                %b Team GB:
-                Apologies! No offence intended. Anyway, swing on down to Belo Horizonte and we’ll see you there.
-              %p.highligh-pink
-                %b Tanjun:
-                *cue swinging*
+            .six.columns.split-50-50
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Team GB
+                  %p.chat  Brazil. Olympic Preparation Camp. Team GB athletes. Make stuff?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Yes, yes...aaaand yes!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Team GB
+                  %p.chat Cool! You’ll have very limited access and time with the athletes so you’ll need to be super reactive and think on your feet! Do monkeys even have feet?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat  Yes! Yes we do! Thank you very much!
+
+
+.section
+  .sub-section
+    .outer
+      .middle
+        .inner
+
+          .row
+            .six.columns.split-50-50
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Team GB
+                  %p.chat Also, we need to tell the story of the Team GB Olympic prep camp. The team behind the team. It’s the first time we’ve done this, so don’t mess it up!!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat We’re highly professional, talented and handsome monkeys! We’ve got this!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand Team GB
+                  %p.chat Good! Anyway, swing on down to Belo Horizonte and we’ll see you there. It’s gonna be some summer!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat *cue frantic swinging*
