--- a/views/case-studies/small-and-nimble/result.haml
+++ b/views/case-studies/small-and-nimble/result.haml
@@ -14,19 +14,25 @@
             .result-block.blue
               .result
                 %h5 2m
-                %p Views
+                %p
+                  Views
+                  %br BBC Two
             .result-block.white
               .result
                 %h5 4k
-                %p Comments
+                %p
+                  Short Form
+                  %br Views
             .result-block.blue
               .result
                 %h5 146k
-                %p Likes
+                %p
+                  Twitter
+                  %br Engagement
             .result-block.white
               .result
                 %h5 10k
                 %p
-                  Behind the
-                  %br scenes
+                  Facebook
+                  %br Views
 
