--- a/views/case-studies/big-and-bold/problem.haml
+++ b/views/case-studies/big-and-bold/problem.haml
@@ -1,4 +1,4 @@
-.section
+.section.pink
   .sub-section
     .mobile-header.white-bg
       %h1
@@ -11,73 +11,56 @@
       .middle
         .inner
           .row
-            .twelve.columns.split-75-25
-              %p.highlight.highlight-blue.triangle-border.left
-                %span.chat The National Lottery:
-                Hey Tanjun
-              %p.highlight.highlight-pink.triangle-border.right
-                %span.chat Tanjun:
-                Hey guys
-              %p.highlight.highlight-blue.triangle-border.left
-                %span.chat The National Lottery:
-                Can you communicate the message that over
-                %b 1,300
-                British athletes are funded by The National Lottery, making them some of the best athletes in the world?
-              %p.highlight.highlight-pink.triangle-border.right
-                %span.chat Tanjun:
-                Yeah, no worries!
-              %p.highlight.highlight-blue.triangle-border.left
-                %span.chat The National Lottery:
-                Yeah, BTW, can you communicate it to a completely new
-                %b young audience
-                that thinks The National Lottery was created in the
-                %b early 18th centenary
-                by some ‘old dudes’.
-              %p.highlight.highlight-pink.triangle-border.right
-                %span.chat Tanjun:
-                Ha! Young people hey, lol. Yep, no worries.
-              %p.highlight.highlight-blue.triangle-border.left
-                %span.chat The National Lottery:
-                Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever, across the UK. In fact, can you also communicate the fact we have funded over
-                %b 500k projects.
-              %p.highlight.highlight-pink.triangle-border.right
-                %span.chat Tanjun:
-                Right! Yeah, we’ll add that to the list.
-              %p.highlight.highlight-blue.triangle-border.left
-                %span.chat The National Lottery:
-                Great, thank you!
-              %p.highlight.highlight-pink.triangle-border.right
-                %span.chat Tanjun:
-                You’re welcome
+            .nine.columns.split-75-25
 
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat Hey! Can you communicate that over 1,300 British athletes are funded by The National Lottery, making them some of the best athletes in the world?
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Hell yeah we can! No worries!
 
-            / .four.columns
-            /   .stat.stat-one.stat-hidden
-            /     .value 1,300
-            /     .support British athletes
-            /   .stat.stat-two.stat-hidden
-            /     %img.image{:src => "/assets/img/case-studies/big-and-bold/old-dudes.png"}
-            /   .stat.stat-three.stat-hidden
-            /     .value 500k
-            /     .support projects
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat Awesome! Can you communicate it to a completely new young audience that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Ha! Young people hey, lol. Yep, no worries.
 
-/ .section
-/   .sub-section
-/     .outer
-/       .middle
-/         .inner
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever across the UK.
 
-/           .row
-/             .six.offset-by-six.columns
-/               %p.highlight-blue.triangle-border.left
-/                 %span.chat The National Lottery:
-/                 Oh, one other thing…
-/               %p.highlight-pink.triangle-border.right
-/                 %span.chat Tanjun:
-/                 Yeah, sure, go for it!
-/               %p.highlight-blue.triangle-border.left
-/                 %span.chat The National Lottery:
-/                 You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
-/               %p.highlight-pink.triangle-border.right
-/                 %span.chat Tanjun:
-/                 Errr, yep, we can do that!!!!! Nooooo problem!!!
+.section
+  .sub-section
+    .outer
+      .middle
+        .inner
+
+          .row
+            .nine.columns.split-75-25
+
+              .chat-block
+                .highlight.highlight-pink.triangle-border.right.single
+                  %p.brand Tanjun:
+                  %p.chat Right! Yeah, we’ll add that to the list.
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat Oh, one other thing…
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Yeah, sure, go for it!
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat  *gulp* Consider it done!
+
