--- a/views/case-studies/digital-influencer/problem.haml
+++ b/views/case-studies/digital-influencer/problem.haml
@@ -1,4 +1,4 @@
-.section
+.section.pink
   .sub-section
     .mobile-header.white-bg
       %h1
@@ -11,55 +11,28 @@
       .middle
         .inner
           .row
-            .eight.columns
-              %p.highligh-blue
-                %b The National Lottery:
-                Hey Tanjun
-              %p.highligh-pink
-                %b Tanjun:
-                Hey guys
-              %p.highligh-blue
-                %b The National Lottery:
-                Can you communicate the message that over 1,300 British athletes are funded by The National Lottery, making them some of the best athletes in the world?
-              %p.highligh-pink
-                %b Tanjun:
-                Yeah, no worries!
-              %p.highligh-blue
-                %b The National Lottery:
-                Yeah, BTW, can you communicate it to a completely new young audience that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
-              %p.highligh-pink
-                %b Tanjun:
-                Ha! Young people hey, lol. Yep, no worries.
-              %p.highligh-blue
-                %b The National Lottery:
-                Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever, across the UK. In fact, can you also communicate the fact we have funded over 500k projects.
-              %p.highligh-pink
-                %b Tanjun:
-                Right! Yeah, we’ll add that to the list.
-              %p.highligh-blue
-                %b The National Lottery:
-                Great, thank you!
-              %p.highligh-pink
-                %b Tanjun:
-                You’re welcome
+            .ten.columns.split-50-50
 
-.section
-  .sub-section
-    .outer
-      .middle
-        .inner
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat It’s the National Lottery Awards!!!! Massive TV show on BBC One and a huuuge annual campaign. We need content! LOT’S OF CONTENT! GOOD CONTENT! HELP!!!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Ain’t no thing like a monkey on a swing!
 
-          .row
-            .six.offset-by-six.columns
-              %p.highligh-blue
-                %b The National Lottery:
-                Oh, one other thing…
-              %p.highligh-pink
-                %b Tanjun:
-                Yeah, sure, go for it!
-              %p.highligh-blue
-                %b The National Lottery:
-                You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
-              %p.highligh-pink
-                %b Tanjun:
-                Errr, yep, we can do that!!!!! Nooooo problem!!!
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat Errrr, thanks! We need to reach as many people as possible. Like zillions of ‘em!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Pah! We take your zillions and raise you to gatrillion zillion chillion! Aaaand if we can’t deliver that, how about a few hundred thousand instead?
+
+              .chat-block
+                .highlight.highlight-blue.triangle-border.left
+                  %p.brand The National Lottery:
+                  %p.chat Yeah that’ll do!
+                .highlight.highlight-pink.triangle-border.right
+                  %p.brand Tanjun:
+                  %p.chat Consider it done! *dismounts swing*
