--- a/views/case-studies/small-and-nimble/solution_section.haml
+++ b/views/case-studies/small-and-nimble/solution_section.haml
@@ -14,23 +14,22 @@
             .row
               .seven.columns
                 %h2
-                  Think big!
+                  Mission Impossible
                 %p
-                  The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+                  With all athletes at the prep camp just a couple of weeks away from the biggest event of their lives in Rio, we had next to no time with the athletes.
+
+                %p
+                  With just a two man crew we we’re able to create a suite of content that for the first time brought Team GB supporters behind the scenes of a Olympic preparation camp.
 
                 %h2
-                  Authentic Message
+                  Short and Sweet
                 %p
-                  To help deliver the messaging needed, we needed a funded British athlete to feature and that person was Team GB athletics captain and 100m sprinter, Adam Gemili.
+                  To enable quick content executions that were flexible and reactive, we built a number of short form pieces, supported by exclusive behind the scenes imagery.
 
-                %h2
-                  Confident Execution
-                %p
-                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
 
       .four.offset-by-seven.columns.ksi.media-mobile
         .ksi-img
-          %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
+          %img.image{:src => "/assets/img/case-studies/small-and-nimble/solution-1.jpeg"}
 
   .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
@@ -42,18 +41,21 @@
             .row
               .seven.columns
                 %h2
-                  Think big!
+                  Mission Impossible
                 %p
-                  The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+                  With all athletes at the prep camp just a couple of weeks away from the biggest event of their lives in Rio, we had next to no time with the athletes.
+
+                %p
+                  With just a two man crew we we’re able to create a suite of content that for the first time brought Team GB supporters behind the scenes of a Olympic preparation camp.
 
                 %h2
-                  Authentic Message
+                  Short and Sweet
                 %p
-                  To help deliver the messaging needed, we needed a funded British athlete to feature and that person was Team GB athletics captain and 100m sprinter, Adam Gemili.
+                  To enable quick content executions that were flexible and reactive, we built a number of short form pieces, supported by exclusive behind the scenes imagery.
 
       .four.offset-by-seven.columns.ksi
         .ksi-img
-          %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
+          %img.image{:src => "/assets/img/case-studies/small-and-nimble/solution-1.jpeg"}
 
 .section
   .sub-section.sub-section-mobile
@@ -70,14 +72,21 @@
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
               .seven.columns
-                %p
-                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
-                %p
-                  Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
-                  The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
-                %p
-                  Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
 
+                %p
+                  All of the imagery was supported by snapshot quotes from team members and athletes.
+                  %br This built the story of the team behind the team.
+
+                %h2
+                  Go Big, then Go Home
+                %p
+                  We pulled together the whole piece into one film. This film was broadcast on primetime Saturday night TV on BBC Two.
+
+                %p
+                  The first evening of competition at the Rio Olympics. We received incredible feedback from the BBC commissioner and then we headed off to the dark depths of the Amazon to celebrate!
+
+                %p
+                  Obrigado Brasil
 
   .sub-section.sub-section-desktop
     .blue-block.blue-block-long
@@ -93,63 +102,21 @@
                   Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
 
               .seven.columns
+
+                %p
+                  All of the imagery was supported by snapshot quotes from team members and athletes.
+                  %br This built the story of the team behind the team.
+
                 %h2
-                  Confident Execution
+                  Go Big, then Go Home
                 %p
-                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
+                  We pulled together the whole piece into one film. This film was broadcast on primetime Saturday night TV on BBC Two.
+
                 %p
-                  Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
-                  The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
+                  The first evening of competition at the Rio Olympics. We received incredible feedback from the BBC commissioner and then we headed off to the dark depths of the Amazon to celebrate!
+
                 %p
-                  Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
-
-
-.section
-  .sub-section.sub-section-mobile
-    .blue-block.blue-block-long
-      .outer
-        .middle
-          .inner
-            .row
-              .seven.columns
-                %p
-                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels. This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel. Awesome!!!
-
-              .five.columns.media-mobile
-                .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
-
-            .row
-              .seven.columns
-                .quote
-                  “  Tanjun managed to produce a film which worked for both us and KSI. It was pitched perfectly – funny, tongue-in-cheek, well messaged – and has had great audience engagement. "
-                .auth
-                  — Jackie O Sullivan, Director,
-                  %br National Lottery Promotions Unit
-
-
-
-
-  .sub-section.sub-section-desktop
-    .blue-block.blue-block-long
-      .outer
-        .middle
-          .inner
-            .row
-              .five.offset-by-one.columns
-                .quote
-                  “  Tanjun managed to produce a film which worked for both us and KSI. It was pitched perfectly – funny, tongue-in-cheek, well messaged – and has had great audience engagement. "
-                .auth
-                  — Jackie O Sullivan, Director,
-                  %br National Lottery Promotions Unit
-              .five.offset-by-one.columns
-                .embed-container.short
-                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
-
-
-
-
-
+                  Obrigado Brasil
 
 
 
